--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -52,7 +52,8 @@
 <div id="groups" class="ui-body-<%= theme_code %> ui-content">
   <h2><%= t :groups %></h2>
   <p>
-    <%= t 'projects.groups_intro', group_count: @project.groups.count %><br><br>
+    <%= t 'projects.groups_intro', group_count: @project.groups.count %><br>
+    <br>
     <%= link_to t('projects.recalculate_diversities'),
         rescore_groups_path( id: @project.id ) %>
     <%= form_tag add_group_path, method: :get do %>
@@ -82,7 +83,8 @@
           </tr>
           <tr>
             <th>
-              <%= t 'projects.diversity_scores' %><br><br>
+              <%= t 'projects.diversity_scores' %><br>
+              <br>
               <%= t :student_names %>
             </th>
             <% groups = @project.groups %>
@@ -120,8 +122,9 @@
   <h2><%= t :resp_summ %></h2>
 </div>
 <div id="responses" class="ui-body-<%= theme_code %> ui-content">
-  <h2><%= t :resp_data %><h2>
-</div>
-</div>
+  <h2><%= t :resp_data %>
+    <h2>
+    </div>
+  </div>
   <%= link_to (t 'projects.edit.title'), edit_project_path(@project) %>
-<%= link_to (t :back_to_course), @project.course %>
+  <%= link_to (t :back_to_course), @project.course %>
