exploding comment window

--- a/app/views/layouts/graphing.html.erb
+++ b/app/views/layouts/graphing.html.erb
@@ -31,6 +31,7 @@
       chrtCtx.gVm = '<%= t 'graphing.g_vm' %>';
       chrtCtx.gAgB = '<%= t 'graphing.g_ag_b' %>';
       chrtCtx.gAgM = '<%= t 'graphing.g_ag_m' %>';
+      chrtCtx.clickForMore = '<%= t 'graphing.click_for_more' %>';
     <% end -%>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "graphing_manifest" %>
