--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -40,6 +40,8 @@
         <td>
           <%= link_to t( :show ), course_path( course ) %>&nbsp;|&nbsp;
           <%= link_to t( :edit ), edit_course_path(course) %>&nbsp;|&nbsp;
+          <%= link_to t( :copy ), "#", onclick:
+            "alert('#{course.start_date}')" %>&nbsp;|&nbsp;
           <%= link_to t( :destroy ),
                         course_path( course ),
                         method: :delete,
@@ -51,3 +53,16 @@
 </table>
 <br>
 <%= link_to( t( 'courses.new.title' ), new_course_path ) if @current_user.is_admin? %>
+<div data-role="popup" id="copyPop" data-theme="<%= theme_code %>" class="ui-corner-all">
+  <form>
+    <div style="padding:10px 20px;">
+      <h1><%= t '.copy_new_start' %></h1>
+      <strong><%= t '.original_date' %>:</strong>
+      <span id='orig_date'>REPLACE</span></br>
+      <label for='start_date'><%= t '.copy_new_start_lbl' %></label>
+      <input type='hidden' id='id' value='xxx'/>
+      <input type='date' id='start_date'>
+      <input type="submit" id="copy_course"/>
+    </div>
+  </form>
+</div>
