Building out the copy functionality

--- a/app/views/bingo_games/_form.html.erb
+++ b/app/views/bingo_games/_form.html.erb
@@ -46,11 +46,11 @@
       </tr>
       <tr>
         <td >
-          <%= f.input :start_date, as: :date_time_local %>
+          <%= f.input :start_date, as: :date, html5: true %>
         </td>
         <td width="10%" align="center" valign="center">&nbsp;</td>
         <td >
-          <%= f.input :end_date, as: :date_time_local %>
+          <%= f.input :end_date, as: :date, html5: true %>
         </td>
       </tr>
       <tr>
