--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -21,11 +21,11 @@
     <table width="100%">
       <tr>
         <td width="45%">
-          <%= f.input :start_date, as: :date_time_local, label: "Project start date" %>
+          <%= f.input :start_date, as: :date, html5: true, label: "Project start date" %>
         </td>
         <td width="10%" align="center" valign="center">&nbsp;</td>
         <td width="45%">
-          <%= f.input :end_date, as: :date_time_local, label: "Project end date" %>
+          <%= f.input :end_date, as: :date, html5: true, label: "Project end date" %>
         </td>
       </tr>
       <tr>
