--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -17,9 +17,8 @@
         <%= f.input :number %>
         <%= f.association :school %>
         <%= f.time_zone_select :timezone %>
-        <%= label_tag :start_date, t( :start_date ) %>
-        <%= f.date_field :start_date %>
-        <%= f.input :end_date, as: :date_time_local %>
+        <%= f.input :start_date, as: :date, html5: true %>
+        <%= f.input :end_date, as: :date, html5: true %>
         <%= f.input :description, as: :text %>
       </div>
     </div>
