--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -20,11 +20,11 @@
     <table width="100%">
       <tr>
         <td width="45%">
-          <%= f.input :start_date, as: :date_time_local, label: t( 'experiences.start_date_lbl') %>
+          <%= f.input :start_date, as: :date, html5: true, label: t( 'experiences.start_date_lbl') %>
         </td>
         <td width="10%" align="center" valign="center">&nbsp;</td>
         <td width="45%">
-          <%= f.input :end_date, as: :date_time_local, label: t( 'experiences.end_date_lbl' )%>
+          <%= f.input :end_date, as: :date, html5: true, label: t( 'experiences.end_date_lbl' )%>
         </td>
       </tr>
       <tr>
